kubernetes/02-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-app
  namespace: f1-vote
spec:
  selector:
    matchLabels:
      app: f1-app
  template:
    metadata:
      labels:
        app: f1-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      containers:
      - name: f1-app
        image: ghcr.io/username/f1-vote-app:latest # This will be dynamically replaced in the GitHub Actions workflow
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5   
          periodSeconds: 5         
          successThreshold: 1    
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi" 
          limits:
            cpu: "500m"     
            memory: "256Mi" 
---
apiVersion: v1
kind: Service
metadata:
  name: f1-service
  namespace: f1-vote
spec:
  type: ClusterIP
  selector:
    app: f1-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
