kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  # IP of the master node with sslip.io domain
  - host: "f1.52.47.126.107.sslip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f1-service
            port:
              number: 80
